//
// Created by Filipe on 20/12/2025.
//

#ifndef LETI_ESOFT_25_26_B1_FACILITYDTO_H
#define LETI_ESOFT_25_26_B1_FACILITYDTO_H

#pragma once
#include <string>

struct FacilityDto {
    int facilityID;
    std::string name;
};

#endif //LETI_ESOFT_25_26_B1_FACILITYDTO_H
